[package]
name = "stream_playback"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
tokio = { version = "1.28", features = ["rt", "macros", "net", "signal", "time", "sync"] }
ringbuf = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
