[package]
name = "stream-playback"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
tokio = { version = "1.28", features = ["rt", "macros", "net", "signal", "time", "sync"] }
ringbuf = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["limit"] }
base64 = "0.22"
subtle = "2.5"
tempfile = "3"
serde_json = "1"
